Adding MovieLocalDataSource.getMovies()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Movie App</string>
     <string name="movie_images">Movie Images</string>
+    <string name="local_movie_images">Local Movie Images</string>
+    <string name="images_of_spider_man">Checkout Images of SPIDER-MAN</string>
 </resources>
